<resources>
    <!-- Title of app -->
    <string name="app_name">HelloSharedPrefs</string>

    <!-- Button label for blue button -->
    <string name="blue_button">Blue</string>

    <!-- Button label for green button -->
    <string name="green_button">Green</string>

    <!-- Button label for red button -->
    <string name="red_button">Red</string>

    <!-- Button label for black button -->
    <string name="black_button">Black</string>

    <!-- Default string for count TextView -->
    <string name="default_count">0</string>

    <!-- Button label for Count button -->
    <string name="count_button">Count</string>

    <!-- Button label for Reset button -->
    <string name="reset_button">Reset</string>
    <string name="settings_button">Settings</string>
    <string name="color">Select Color:</string>
    <string name="count">Enter Count:</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>

    <string-array name="color_options">
        <item>Default</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
    </string-array>
</resources>